force-app/main/default/objects/Lead/fields/Campaign_Score__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Score__c</fullName>
    <description
    >Sum of all the lead scoring rules from campaign member lead scoring rules</description>
    <inlineHelpText
    >Sum of all the lead scoring rules from campaign member lead scoring rules</inlineHelpText>
    <label>Campaign Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>