force-app/main/default/objects/Lead/fields/Lead_Priority__c.field-meta.xml
<CustomField>
    <fullName>Lead_Priority__c</fullName>
    <formula
    >if( Total_Lead_Score__c &lt;30,&quot;C&quot;,if(Total_Lead_Score__c &lt;50, &quot;B&quot;, &quot;A&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Priority</label>
    <type>Text</type>
</CustomField>