force-app/main/default/objects/Lead/fields/Total_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Lead_Score__c</fullName>
    <description>Sum of Campaign Score and Lead Score</description>
    <formula>Campaign_Score__c  +Lead_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Campaign Score and Lead Score</inlineHelpText>
    <label>Total Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>